--- a/coldwell-banker-api/package.json
+++ b/coldwell-banker-api/package.json
@@ -25,6 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "n2words": "^1.23.1",
     "pdfkit": "^0.17.2",
     "pizzip": "^3.2.0",
     "prisma": "^6.19.0"
